welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value get
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(get==getMondeLargeur) {setY(getY+1)} else {setPos(getX()+1,0)}}  
                                                        ^